# spring-server-log/src/main/java/ch/heigvd/dnd/entities/PlayerEntity.java
@@ -1,27 +1,47 @@
 package ch.heigvd.dnd.entities;
 
+import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.Id;
+import javax.persistence.Table;
 import java.io.Serializable;
 
 @Entity
+@Table(name = "player")
 public class PlayerEntity implements Serializable {
     @Id
-    private String id;
+    @Column(name="email", unique=true)
+    private String email;
 
+    @Column(name="pseudo")
+    private String pseudo;
+    @Column(name="password")
     private String password;
+    @Column(name="strength")
     private int strength;
+    @Column(name="dexterity")
     private int dexterity;
+    @Column(name="constitution")
     private int constitution;
+    @Column(name="intelligence")
     private int  intelligence;
+    @Column(name="wisdom")
     private int wisdom;
+    @Column(name="charisma")
     private int charisma;
+    @Column(name="race")
     private String race;
+    @Column(name="classe")
     private String classe;
+    @Column(name="administrator")
+    private boolean administrator;
+    @Column(name="blocked")
+    private boolean blocked;
 
-    public String getId(){ return id;}
 
-    public void setId(String id){this.id = id;}
+    public String getEmail(){ return email;}
+
+    public void setEmail(String email){this.email = email;}
 
     public String getPassword(){return password;}
 
@@ -85,5 +105,29 @@ public class PlayerEntity implements Serializable {
 
     public void setClasse(String classe) {
         this.classe = classe;
+    }
+
+    public String getPseudo() {
+        return pseudo;
+    }
+
+    public void setPseudo(String pseudo) {
+        this.pseudo = pseudo;
+    }
+
+    public boolean isAdministrator() {
+        return administrator;
+    }
+
+    public void setAdministrator(boolean administrator) {
+        this.administrator = administrator;
+    }
+
+    public boolean isBlocked() {
+        return blocked;
+    }
+
+    public void setBlocked(boolean blocked) {
+        this.blocked = blocked;
     }
 }
